<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnhome_home"
        android:icon="@drawable/home_selector"
        android:title="@string/mnhome_bangtin"
        />
    <item
    android:id="@+id/mnhome_Group"
    android:icon="@drawable/group_select"
    android:title="@string/mnhome_group"
    />
    <item
        android:id="@+id/mnhome_pageaccout"
        android:icon="@drawable/account_selector"
        android:title="@string/mnhome_pageaccout"
        />
    <item
        android:id="@+id/mnhome_thongbao"
        android:icon="@drawable/notication_selector"
        android:title="@string/mnhome_thongbao"
        />
    <item
        android:id="@+id/mnhome_menu"
        android:icon="@drawable/menu_select"
        android:title="@string/mnhome_menu"
        />
</menu>