<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DangKyActivity"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dangky_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#10e062"
        app:title="@string/title_dangky"
        android:layout_alignParentTop="true"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dangky_toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dangky_tv_tieude"
                    android:textSize="30dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/dangky_edt_sdt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dangky_edt_sdt"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:inputType="phone"
                    />
                <EditText
                    android:id="@+id/dangky_edt_ho"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_ho"
                    android:drawableLeft="@drawable/id_card"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    />
                <EditText
                    android:id="@+id/dangky_edt_ten"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_ten"
                    android:drawableLeft="@drawable/id_card"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:inputType="text"
                    />
                <EditText
                    android:id="@+id/dangky_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_email"
                    android:drawableLeft="@drawable/ic_email"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    />

                <EditText
                    android:id="@+id/dangky_edt_ngaysinh"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_ngaysinh"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black"
                    android:inputType="date"
                    />
                <EditText
                    android:id="@+id/dangky_edt_matkhau"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_matkhau"
                    android:drawableLeft="@drawable/ic_pass"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/dangky_edt_nhaplaimk"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/dangky_edt_nhaplaimk"
                    android:drawableLeft="@drawable/ic_pass"
                    android:paddingLeft="5dp"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/dangky_btn_thoat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Thoát"
                    android:background="@drawable/btn_dangky"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/dangky_btn_dangky"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Đăng Ký"
                    android:textSize="25dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:background="@drawable/stype_btn_dangnhap"
                    android:layout_margin="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>